# py-realms

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: pr.yaml
cards/: blob.py  deck.py  factionless.py  federation.py  imperial.py  machine.py
cards/blob/: blob.py
cards/factionless/: explorer.py  scout.py  viper.py
cards/federation/: cutter.py  federation_shuttle.py
cards/machine/: battle_station.py
docs/: index.md
models/: action.py  card.py  deck.py  enums.py  exceptions.py  game.py  player.py
py_realms/: main.py
py_realms/cards/: blob.py  deck.py  factionless.py  federation.py  imperial.py  machine.py
py_realms/models/: action.py  card.py  deck.py  enums.py  game.py  player.py
tests/: test_action.py  test_deck.py  test_game.py  test_player.py
