[tool.poetry]
name = "py-realms"
version = "0.1.0"
description = "Star Realms Python implementation."
authors = ["Sam Thorold <sam.thorold@gmail.com>"]
readme = "README.md"
packages = [{include = "py_realms"}]

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.1.0"
pydantic = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"
mkdocs-material = "^9.1.19"
mkdocstrings-python = {extras = ["python"], version = "^1.2.1"}
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
pythonpath = "."
addopts="--doctest-modules"

[tool.coverage.run]
omit = [
    "main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]